--- a/style/style.css
+++ b/style/style.css
@@ -16,3 +16,8 @@ body {
     transform-style: preserve-3d;
     transition: transform 300ms ease-in-out;
 }
+.cartao_conteudo_resposta p {
+    color: var(--card-back-color);
+    font-weight: 700;
+
+}
