--- a/style/style.css
+++ b/style/style.css
@@ -19,5 +19,7 @@ body {
 .cartao_conteudo_resposta p {
     color: var(--card-back-color);
     font-weight: 700;
-
+}
+.cartao:hover .cartao_conteudo{
+    transform: rotateY(180deg);
 }
