--- a/style/style.css
+++ b/style/style.css
@@ -23,3 +23,13 @@ body {
 .cartao:hover .cartao_conteudo{
     transform: rotateY(180deg);
 }
+.cartao_conteudo_pergunta,
+.cartao_conteudo_resposta{
+    backface-visibility: hidden;
+    position: absolute;
+    height:100%;
+    width: 100%;
+}
+.cartao_conteudo_resposta{
+    transform: rotateY(180deg);
+}
